fixed dark mode light mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,10 +16,10 @@
   }
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #787575;
+    --foreground: #201f1f;
   }
 }
 
